# yellowpages-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  someFIle.py
src/yellowpages/: YellowPageScraper.py  __init__.py  contact_info_finder.py
